<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2f2f2f"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SettingsScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/SettingsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ColorSetting"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_Color"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <Spinner
                    android:id="@+id/spinnerColor"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#FFD6D7D7"
                    android:entries="@array/Packages"
                    android:textAlignment="viewStart" />
            </LinearLayout>

            <Button
                android:id="@+id/confirmButtonColor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#849B9C"
                android:onClick="ConfirmColor"
                android:shadowColor="#00000000"
                android:shadowDy="100"
                android:shadowRadius="200"
                android:text="@string/settings_confirm"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="262dp"
                tools:layout_editor_absoluteY="314dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextPerson"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_Single"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <Spinner
                    android:id="@+id/spinnerPerson"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:background="#FFD6D7D7"
                    android:gravity="center"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextAantal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_SingleAmount"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <Spinner
                    android:id="@+id/spinnerNumber"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:background="#D6D7D7"
                    android:entries="@array/integers"
                    android:textAlignment="textStart" />
            </LinearLayout>

            <Button
                android:id="@+id/ConfirmButtonExtra"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#849B9C"
                android:onClick="ConfirmExtra"
                android:text="@string/settings_confirm"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="262dp"
                tools:layout_editor_absoluteY="314dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NameChanger"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_changeName"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <Spinner
                    android:id="@+id/spinnerChangeFrom"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#D6D7D7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NameChangerTo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_changeNameto"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/settings_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Button
                android:id="@+id/ConfirmButtonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#849B9C"
                android:onClick="ConfirmNameChange"
                android:text="@string/settings_confirm" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AddingNameText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_addName"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/addPersonTextField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/settings_hint"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <Button
                android:id="@+id/AddingNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#849B9C"
                android:onClick="ConfirmAddedPerson"
                android:text="@string/settings_confirm" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RemovePeronText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings_removeName"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <Spinner
                    android:id="@+id/spinnerRemove"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#D6D7D7" />
            </LinearLayout>

            <Button
                android:id="@+id/RemovingNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#849B9C"
                android:onClick="ConfirmDeletePerson"
                android:text="@string/settings_confirm" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:backgroundTint="#B71C1C"
                    android:onClick="ConfirmReset"
                    android:text="@string/settings_Reset" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/VersionShower"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="bottom|end"
                android:text="@string/app_version"
                android:textAlignment="viewEnd" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>