<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414141"
    tools:context=".Statistics">

    <TextView
        android:id="@+id/StatisticsTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2f2f2f"
        android:gravity="center"
        android:text="@string/statistics_title"
        android:textAlignment="center"
        android:textColor="@color/current_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticsTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DeZuipLappen"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/statistics_drink"
                android:textAlignment="center"
                android:textColor="@color/current_text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/PieChartOverallDrank"
                android:layout_width="fill_parent"
                android:layout_height="350dp">

            </com.github.mikephil.charting.charts.PieChart>

            <TextView
                android:id="@+id/DeRijkeTatas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/statistics_bought"
                android:textAlignment="center"
                android:textColor="@color/current_text"
                android:textSize="26sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/PieChartOverallBought"
                android:layout_width="fill_parent"
                android:layout_height="350dp">

            </com.github.mikephil.charting.charts.PieChart>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>