<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/current_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pascal.bierlijst20.HistoryWindows">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2f2f2f"
        android:gravity="center"
        android:text="@string/title_activity_history_window"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"

            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_Total"
                android:layout_width="45dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_totalBier"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_Date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="69dp" />


            <TextView
                android:id="@+id/header_Date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/header_Date"
                android:textAlignment="textStart"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_Time"
                app:layout_constraintStart_toEndOf="@+id/header_Total"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="41dp" />

            <TextView
                android:id="@+id/header_Time"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_Time"
                android:textAlignment="textStart"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_Action1"
                app:layout_constraintStart_toEndOf="@+id/header_Date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="23dp" />

            <TextView
                android:id="@+id/header_Action1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_Action"
                android:textAlignment="center"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_Person"
                app:layout_constraintStart_toEndOf="@+id/header_Time"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="52dp" />

            <TextView
                android:id="@+id/header_Person"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_Person"
                android:textAlignment="center"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/header_Balance"
                app:layout_constraintStart_toEndOf="@+id/header_Action1"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="32dp" />

            <TextView
                android:id="@+id/header_Balance"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_Balance"
                android:textAlignment="center"
                android:textColor="@color/current_buttonsDark"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/header_Person"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="42dp" />
        </android.support.constraint.ConstraintLayout>
    </TableLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/myTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/totalRows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>