<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414141"
    tools:context="com.example.pascal.bierlijst20.FurtherProcess">


    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <Button
        android:id="@+id/bierButton"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/furtherbuttons"
        android:onClick="takeBeer"
        android:text="@string/bierdrinken"
        android:textColor="@color/current_text"
        app:layout_constraintEnd_toStartOf="@+id/kratButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameShow" />

    <Button
        android:id="@+id/kratButton"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/furtherbuttons"
        android:elevation="0dp"
        android:onClick="buyCrate"
        android:text="@string/biergekocht"
        android:textColor="@color/current_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bierButton"
        app:layout_constraintTop_toBottomOf="@+id/nameShow" />

    <TextView
        android:id="@+id/nameShow"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2f2f2f"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/balance_Box"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/current_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/undoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kratButton" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/furtherbuttons"
        android:onClick="unDo"
        android:text="@string/undo"
        android:textColor="@color/current_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_Box" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/PieChartOverall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="clickOnBarChart"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoButton" />


</android.support.constraint.ConstraintLayout>
